# copper-mod-manager

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.zed/: tasks.json
src/: adapter.rs  cli.rs  lib.rs  main.rs  modrinth_api.rs  service.rs  utils.rs
src/contract/: support.rs
src/domain/: minecraft_mod.rs  mod.rs
src/domain/contract/: add.rs  file_system.rs  latest.rs  list.rs  minecraft_mods_service.rs  mod.rs  rm.rs
src/domain/entities/: minecraft_mod.rs
src/domain/minecraft_mod/: rules.rs
src/infrastructure/: file_system.rs  mod.rs  modrinth_api.rs  web_api.rs
src/infrastructure/file_system/: adapter.rs
src/infrastructure/modrinth_api/: adapter.rs
src/presentation/view/: add.rs  latest.rs  list.rs  mod.rs  rm.rs  support.rs  update.rs
src/service/: add.rs  check.rs  entities.rs  latest.rs  list.rs  minecraft_mods.rs  mod.rs  rm.rs  support.rs  utils.rs
src/view/: add.rs  latest.rs  list.rs  mod.rs  rm.rs  support.rs
